[gd_scene load_steps=14 format=3 uid="uid://wyi8ts15lueo"]

[ext_resource type="Script" path="res://runner.gd" id="1_224jk"]
[ext_resource type="PackedScene" uid="uid://dwqfguj644qf2" path="res://player.tscn" id="2_1y6tv"]
[ext_resource type="Script" path="res://pausing.gd" id="3_kc0cc"]
[ext_resource type="Script" path="res://bullet_time.gd" id="4_vvdtp"]
[ext_resource type="Script" path="res://lives.gd" id="5_t5ia0"]
[ext_resource type="Script" path="res://slowmo.gd" id="6_4qkgi"]

[sub_resource type="LabelSettings" id="LabelSettings_kjhy5"]
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_g5oon"]
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_qjpps"]
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_5vl1r"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_7t52p"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_w13s3"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_w34n5"]
font_size = 30

[node name="Level Runner" type="Node2D"]
script = ExtResource("1_224jk")

[node name="Player" parent="." instance=ExtResource("2_1y6tv")]
unique_name_in_owner = true

[node name="LevelOverText" type="Label" parent="."]
visible = false
offset_left = 536.0
offset_top = 96.0
offset_right = 1030.0
offset_bottom = 264.0
text = "Level over"
label_settings = SubResource("LabelSettings_kjhy5")

[node name="AllEnemies" type="Node" parent="."]

[node name="Pausing" type="Node" parent="."]
process_mode = 3
script = ExtResource("3_kc0cc")

[node name="BulletTime" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(8, 8)
script = ExtResource("4_vvdtp")

[node name="LevelPart" type="Label" parent="."]
offset_top = 16.0
offset_right = 1440.0
offset_bottom = 42.0
label_settings = SubResource("LabelSettings_g5oon")
horizontal_alignment = 1

[node name="DebugTimePassed" type="Label" parent="."]
offset_left = 1368.0
offset_top = 16.0
offset_right = 1416.0
offset_bottom = 48.0
text = "Time"

[node name="PauseOverlay" type="Control" parent="."]
z_index = 20
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PauseOverlay"]
layout_mode = 0
offset_left = 760.0
offset_top = 248.0
offset_right = 1184.0
offset_bottom = 392.0
text = "Paused"
label_settings = SubResource("LabelSettings_qjpps")

[node name="Label2" type="Label" parent="PauseOverlay"]
layout_mode = 0
offset_left = 792.0
offset_top = 392.0
offset_right = 1248.0
offset_bottom = 656.0
text = "ESC to pause/unpause
WASD to move
Left click + aim to shoot
Right click/Space to slowmo
"
label_settings = SubResource("LabelSettings_5vl1r")

[node name="Lives" type="Label" parent="."]
offset_left = 16.0
offset_top = 84.0
offset_right = 85.0
offset_bottom = 115.0
text = "Lives: ?"
label_settings = SubResource("LabelSettings_7t52p")
script = ExtResource("5_t5ia0")

[node name="Slowmo" type="Label" parent="."]
offset_left = 16.0
offset_top = 53.0
offset_right = 122.0
offset_bottom = 84.0
text = "Slowmo: ?s"
label_settings = SubResource("LabelSettings_w13s3")
script = ExtResource("6_4qkgi")

[node name="DeadText" type="Label" parent="."]
visible = false
z_index = 10
offset_left = 360.0
offset_top = 400.0
offset_right = 736.0
offset_bottom = 576.0
label_settings = SubResource("LabelSettings_w34n5")

[connection signal="player_dead" from="Player" to="." method="_on_player_player_dead"]
[connection signal="activated" from="BulletTime" to="Player" method="_on_bullet_time_activated"]
[connection signal="deactivated" from="BulletTime" to="Player" method="_on_bullet_time_deactivated"]
